--- a/application.yml
+++ b/application.yml
@@ -12,4 +12,22 @@ address:
     url: http://address-service/address/
     
 user:
-  message: Hello pradip 
+  message: Hello pradip this is git 
+
+
+spring:
+  datasource:
+    name: springboot
+    url: jdbc:mysql:// localhost:3306/springboot
+    username: root
+    password: 99097@Pradip
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+  jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    generate-ddl: true
+    show-sql: true
+    hibernate:
+      ddl-auto: update
